# BirdNest

./: .gitignore  Cargo.toml  README.md  build-and-install.sh
src/: cli.rs  config.rs  flatpak.rs  gui.rs  main.rs  package_manager.rs  utils.rs
src/gui/: conflict_dialog.rs  install_dialog.rs  pikman_install_dialog.rs  remove_dialog.rs  styles.rs  theme.rs
